payments/gitops/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: payment-service
  namespace: payments

spec:
  selector:
    app: payment-app

  ports:
    - name: http
      port: 80
      targetPort: 5000

  type: ClusterIP
